# HQuickCore

./: CMakeLists.txt  HQuick_global.h  README.md  action.cpp  action.h  base_dao.cpp  base_dao.h  base_object.cpp  base_object.h  base_service.cpp  base_service.h  dispatcher.cpp  dispatcher.h  service_manager.cpp  service_manager.h  single_app_helper.cpp  single_app_helper.h  view_controller.cpp  view_controller.h
